--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "./modulation.js": "./dist/modulation.js",
     "./maps.js": "./dist/maps.js",
     "./numbers.js": "./dist/numbers.js",
+    "./queues.js": "./dist/queues.js",
     "./random.js": "./dist/random.js",
     "./sets.js": "./dist/sets.js",
     "./stateMachine.js": "./dist/stateMachine.js",
@@ -66,44 +67,46 @@
     "test:coverage": "jest --collectCoverage --config config/jest.config.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js",
     "tsc-files": "tsc --noEmit --listFiles | xargs stat -f \"%z %N\" | npx webtreemap-cli",
-    "ava": "ava --config ./config/ava.config.js"
+    "ava": "tsc && ava --config ./config/ava.config.js"
   },
   "devDependencies": {
-    "@svgdotjs/svg.js": "^3.1.2",
+    "@ava/typescript": "^4.1.0",
+    "@svgdotjs/svg.js": "^3.2.0",
     "@types/d3-color": "^3.1.0",
     "@types/d3-interpolate": "^3.0.1",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.2",
     "@types/w3c-web-serial": "^1.0.3",
-    "@types/web-bluetooth": "^0.0.16",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "ava": "^5.3.0",
-    "concurrently": "^7.6.0",
+    "@types/web-bluetooth": "^0.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.1",
+    "ava": "^5.3.1",
+    "concurrently": "^8.2.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "d3-interpolate": "^3.0.1",
-    "esbuild": "^0.17.9",
-    "eslint": "^8.34.0",
-    "eslint-plugin-functional": "^5.0.4",
-    "fp-ts": "^2.13.1",
-    "jest": "^29.4.3",
-    "jest-extended": "^3.2.4",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-functional": "^5.0.8",
+    "fp-ts": "^2.16.0",
+    "jest": "^29.5.0",
+    "jest-extended": "^4.0.0",
     "live-server": "^1.2.2",
-    "rimraf": "^4.1.2",
+    "prettier": "2.8.8",
+    "rimraf": "^5.0.1",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^29.0.5",
-    "tsup": "^6.6.3",
+    "ts-jest": "^29.1.1",
+    "tsup": "^7.1.0",
     "tsutils": "^3.21.0",
     "tsx": "^3.12.7",
-    "typedoc": "^0.23.25",
-    "typescript": "^4.9.5"
+    "typedoc": "^0.24.8",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
-    "bezier-js": "^6.1.2",
+    "bezier-js": "^6.1.3",
     "d3-color": "^3.1.0",
     "json5": "^2.2.3",
-    "lit": "^2.6.1",
+    "lit": "^2.7.5",
     "rxjs": "^7.8.0"
   },
   "engines": {
