--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "**/build": true,
     "**/docs": true
   },
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "prettier.prettierPath": "node_modules/prettier/index.cjs"
 }
