--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/d3-color": "^3.1.0",
     "@types/d3-interpolate": "^3.0.1",
     "@types/jest": "^29.5.2",
+    "@types/jsdom": "^21.1.1",
     "@types/w3c-web-serial": "^1.0.3",
     "@types/web-bluetooth": "^0.0.17",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
@@ -90,6 +91,7 @@
     "fp-ts": "^2.16.0",
     "jest": "^29.6.1",
     "jest-extended": "^4.0.0",
+    "jsdom": "^22.1.0",
     "live-server": "^1.2.2",
     "prettier": "3.0.0",
     "rimraf": "^5.0.1",
