--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
     "dev": "tsup --watch",
     "clean": "rimraf dist && rimraf etc && rimraf docs",
     "run": "tsc && node -r source-map-support/register",
-    "build": "tsup --sourcemap && npm run typings",
+    "build": "tsup --sourcemap && npm run typings && npm run demos:copy",
     "build:espruino": "tsup --config espruino.tsup.config.ts",
     "prepublishOnly": "npm run clean && npm run build",
     "typings": "tsc --project config/tsconfig.pkg.json",
     "typings:watch": "tsc --watch --project config/tsconfig.pkg.json",
-    "demos": "rimraf dist && npm run build && npm run demos:copy",
+    "demos": "rimraf ../ixfx-demos/ixfx/ && rimraf dist && npm run build && npm run demos:copy",
     "demos:watch": "concurrently \"npm run dev\"  \"npm run typings:watch\"",
     "demos:copy": "copyfiles --up 1 ./dist/* ../ixfx-demos/ixfx/",
     "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json",
