--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.10.4",
+  "version": "0.10.5",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -74,19 +74,20 @@
     "@svgdotjs/svg.js": "^3.2.0",
     "@types/d3-color": "^3.1.0",
     "@types/d3-interpolate": "^3.0.1",
-    "@types/jsdom": "^21.1.1",
+    "@types/jsdom": "^21.1.2",
     "@types/w3c-web-serial": "^1.0.3",
     "@types/web-bluetooth": "^0.0.17",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "6.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "6.4.1",
     "ava": "^5.3.1",
-    "concurrently": "^8.2.0",
+    "concurrently": "^8.2.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "d3-interpolate": "^3.0.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-functional": "^6.0.0",
+    "eslint-plugin-unicorn": "^48.0.1",
     "fp-ts": "^2.16.1",
     "jsdom": "^22.1.0",
     "live-server": "^1.2.2",
