--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,9 +31,13 @@
     "unicorn/require-post-message-target-origin": "off",
     "unicorn/prevent-abbreviations": ["error", {
       "ignore": [
-        ".*Opts$"
+        ".*Opts$",
+        "ctx",
+        "el",
+        "opts"
       ],
       "allowList":{"args":true}}],
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "@typescript-eslint/ban-ts-comment": ["off"],
     "@typescript-eslint/array-type": ["error", { "default":"generic" }],
     "@typescript-eslint/no-unsafe-member-access": "off",
