--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,7 @@
     "@typescript-eslint/no-unsafe-argument": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-assignment":"off",
-    "@typescript-eslint/no-unnecessary-condition": ["error", {"allowConstantLoopConditions":true}],
+    "@typescript-eslint/no-unnecessary-condition": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
