--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.17.1",
+  "version": "0.17.4",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -20,14 +20,14 @@
     "./components.js": "./dist/components.js",
     "./webcomponents.js": "./dist/webcomponents.js",
     "./data.js": "./dist/data.js",
-    "./debug.js":"./dist/debug.js",
+    "./debug.js": "./dist/debug.js",
     "./dom.js": "./dist/dom.js",
     "./events.js": "./dist/events.js",
     "./forms.js": "./dist/forms.js",
     "./flow.js": "./dist/flow.js",
     "./geometry.js": "./dist/geometry.js",
     "./generators.js": "./dist/generators.js",
-    "./guards.js":"./dist/guards.js",
+    "./guards.js": "./dist/guards.js",
     "./global.js": "./dist/global.js",
     "./io.js": "./dist/io/js",
     "./immutable.js": "./dist/immutable.js",
@@ -71,7 +71,7 @@
     "docs:copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
     "lint": "eslint src/**",
     "tsc-files": "tsc --noEmit --listFiles | xargs stat -f \"%z %N\" | npx webtreemap-cli",
-    "test": "tsc && ava --config ./config/ava.config.js",
+    "test": "tsc && ava --config ./config/ava.config.js --timeout=30s",
     "circular": "madge --circular --extensions ts src/ > madge.txt"
   },
   "devDependencies": {
@@ -82,8 +82,8 @@
     "@types/jsdom": "^21.1.6",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "7.0.1",
     "ava": "^6.1.1",
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
@@ -99,33 +99,26 @@
     "prettier": "3.2.5",
     "rimraf": "^5.0.5",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^29.1.2",
-    "tsup": "^8.0.1",
+    "tsup": "^8.0.2",
     "tsutils": "^3.21.0",
-    "tsx": "^4.7.0",
-    "typedoc": "^0.25.7",
+    "tsx": "^4.7.1",
+    "typedoc": "^0.25.8",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@septh/ts-run": "^1.2.1",
     "@types/bezier-js": "^4.1.3",
     "bezier-js": "^6.1.4",
     "d3-color": "^3.1.0",
     "json5": "^2.2.3",
     "lit": "^3.1.1",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "tsimp": "^2.0.11"
   },
   "engines": {
-    "node": ">=16.20.0"
+    "node": ">=21.0.0"
   },
   "eslintIgnore": [
     "./dist/**/*"
-  ],
-  "ava": {
-    "files": [
-      "./src/test/*.ts"
-    ],
-    "nodeArguments": [
-      "--loader=tsx"
-    ]
-  }
+  ]
 }
