--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "unicorn/filename-case": ["error", {"case":"pascalCase"}],
     "unicorn/require-post-message-target-origin": "off",
     "unicorn/no-this-assignment": "off",
+    "unicorn/no-keyword-prefix": ["off"],
     "unicorn/prevent-abbreviations": ["error", {
       "ignore": [
         ".*Opts$",
