--- a/package.json
+++ b/package.json
@@ -73,7 +73,12 @@
     "lint": "eslint src/**",
     "tsc-files": "tsc --noEmit --listFiles | xargs stat -f \"%z %N\" | npx webtreemap-cli",
     "test": "tsc && ava --config ./config/ava.config.js --timeout=20s --no-worker-threads -c=1",
-    "circular": "madge --circular --extensions ts src/ > madge.txt"
+    "circular": "madge --circular --extensions ts src/ > madge.txt",
+    "coverage": "c8 npm run test",
+    "coverage:report": "c8 report"
+  },
+  "c8": {
+    "exclude": ["src/__test/**/*", "src/config/**/*"]
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
@@ -86,6 +91,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "7.0.1",
     "ava": "^6.1.1",
+    "c8": "^9.1.0",
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
@@ -112,6 +118,7 @@
     "d3-color": "^3.1.0",
     "json5": "^2.2.3",
     "lit": "^3.1.1",
+    "lit-html": "^3.1.2",
     "tsimp": "^2.0.11"
   },
   "eslintIgnore": [
