--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,13 @@
         ".*El$"
       ],
       "allowList":{"args":true}}],
+    "@typescript-eslint/restrict-template-expressions": [
+      "error",
+      {
+        "allowBoolean": true, 
+        "allowNumber": true
+      }
+    ],
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "@typescript-eslint/ban-ts-comment": ["off"],
     "@typescript-eslint/array-type": ["error", { "default":"generic" }],
