--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.18.6",
+  "version": "0.19.0",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -25,11 +25,11 @@
     "./events.js": "./dist/events.js",
     "./forms.js": "./dist/forms.js",
     "./flow.js": "./dist/flow.js",
-    "./generators.js": "./dist/generators.js",
     "./geometry.js": "./dist/geometry.js",
     "./guards.js": "./dist/guards.js",
     "./global.js": "./dist/global.js",
     "./immutable.js": "./dist/immutable.js",
+    "./iterables.js":"./dist/iterable.js",
     "./io.js": "./dist/io/js",
     "./keyValues.js": "./dist/keyValues.js",
     "./modulation.js": "./dist/modulation.js",
@@ -57,9 +57,9 @@
     "typecheck": "tsc",
     "watch": "tsc --watch",
     "dev": "tsup --watch",
-    "clean": "rimraf dist && rimraf etc && rimraf docs",
+    "clean": "rimraf dist && rimraf etc && rimraf docs && rimraf .tsimp",
     "run": "tsc && node -r source-map-support/register",
-    "build": "tsup --sourcemap && npm run typings && npm run demos:copy",
+    "build": "tsup --sourcemap && npm run typings",
     "build:espruino": "tsup --config espruino.tsup.config.ts",
     "prepublishOnly": "npm run clean && npm run build",
     "typings": "tsc --project config/tsconfig.pkg.json",
@@ -88,17 +88,17 @@
     "@types/jsdom": "^21.1.6",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "7.0.1",
-    "ava": "^6.1.1",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "7.4.0",
+    "ava": "^6.1.2",
     "c8": "^9.1.0",
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "d3-interpolate": "^3.0.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-functional": "^6.0.0",
+    "eslint-plugin-functional": "^6.3.0",
     "eslint-plugin-unicorn": "^51.0.1",
     "jsdom": "^24.0.0",
     "live-server": "^1.2.2",
@@ -108,11 +108,11 @@
     "tsup": "^8.0.2",
     "tsutils": "^3.21.0",
     "tsx": "^4.7.1",
-    "typedoc": "^0.25.8",
-    "typescript": "^5.3.3"
+    "typedoc": "^0.25.12",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "@septh/ts-run": "^1.2.1",
+    "@septh/ts-run": "^1.2.2",
     "@types/bezier-js": "^4.1.3",
     "bezier-js": "^6.1.4",
     "d3-color": "^3.1.0",
