--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "typecheck": "tsc",
     "watch": "tsc --watch",
     "dev": "tsup --watch",
-    "clean": "rimraf dist && rimraf etc && rimraf docs && rimraf .tsimp",
+    "clean": "rimraf dist && rimraf etc && rimraf docs",
     "run": "tsc && node -r source-map-support/register",
     "build": "tsup --sourcemap && npm run typings",
     "build:espruino": "tsup --config espruino.tsup.config.ts",
@@ -86,13 +86,11 @@
   "devDependencies": {
     "@ava/typescript": "^5.0.0",
     "@svgdotjs/svg.js": "^3.2.0",
-    "@types/d3-color": "^3.1.3",
-    "@types/d3-interpolate": "^3.0.4",
-    "@types/jsdom": "^21.1.6",
+    "@types/jsdom": "^21.1.7",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "7.12.0",
     "ava": "^6.1.3",
     "c8": "^9.1.0",
     "concurrently": "^8.2.2",
@@ -100,28 +98,24 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-functional": "^6.3.0",
-    "eslint-plugin-unicorn": "^51.0.1",
-    "jsdom": "^24.0.0",
-    "live-server": "^1.2.2",
-    "prettier": "3.2.5",
-    "rimraf": "^5.0.6",
+    "eslint-plugin-functional": "^6.5.1",
+    "eslint-plugin-unicorn": "^53.0.0",
+    "jsdom": "^24.1.0",
+    "prettier": "3.3.1",
+    "rimraf": "^5.0.7",
     "source-map-support": "^0.5.21",
-    "tsup": "^8.0.2",
-    "tsutils": "^3.21.0",
-    "tsx": "^4.10.0",
+    "tsup": "^8.1.0",
+    "tsx": "^4.13.2",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@septh/ts-run": "^1.2.3",
     "@types/bezier-js": "^4.1.3",
     "bezier-js": "^6.1.4",
     "colorjs.io": "^0.5.0",
     "json5": "^2.2.3",
-    "lit": "^3.1.3",
-    "lit-html": "^3.1.3",
-    "tsimp": "^2.0.11"
+    "lit": "^3.1.4",
+    "lit-html": "^3.1.4"
   },
   "eslintIgnore": [
     "./dist/**/*"
