--- a/package.json
+++ b/package.json
@@ -86,13 +86,16 @@
   "devDependencies": {
     "@ava/typescript": "^5.0.0",
     "@svgdotjs/svg.js": "^3.2.0",
+    "@types/bezier-js": "^4.1.3",
     "@types/jsdom": "^21.1.7",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "7.12.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
     "ava": "^6.1.3",
-    "c8": "^9.1.0",
+    "bezier-js": "^6.1.4",
+    "c8": "^10.0.0",
+    "colorjs.io": "^0.5.0",
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
@@ -101,21 +104,19 @@
     "eslint-plugin-functional": "^6.5.1",
     "eslint-plugin-unicorn": "^53.0.0",
     "jsdom": "^24.1.0",
-    "prettier": "3.3.1",
+    "json5": "^2.2.3",
+    "lit": "^3.1.4",
+    "lit-html": "^3.1.4",
     "rimraf": "^5.0.7",
     "source-map-support": "^0.5.21",
     "tsup": "^8.1.0",
-    "tsx": "^4.13.2",
+    "tsx": "^4.15.2",
     "typedoc": "^0.25.13",
-    "typescript": "^5.4.5",
-    "@types/bezier-js": "^4.1.3",
-    "bezier-js": "^6.1.4",
-    "colorjs.io": "^0.5.0",
-    "json5": "^2.2.3",
-    "lit": "^3.1.4",
-    "lit-html": "^3.1.4"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@microsoft/api-extractor": "7.47.0",
+    "tsimp": "2.0.11"
   },
   "eslintIgnore": [
     "./dist/**/*"
