--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "dev": "tsup --watch",
     "clean": "rimraf dist && rimraf etc && rimraf docs",
     "run": "tsc && node -r source-map-support/register",
-    "build": "tsup --sourcemap && npm run typings",
+    "build": "NODE_OPTIONS='--max-old-space-size=16384' tsup --sourcemap && npm run typings",
     "build:espruino": "tsup --config espruino.tsup.config.ts",
     "prepublishOnly": "npm run clean && npm run build",
     "typings": "tsc --project config/tsconfig.pkg.json",
