--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "./geometry.js": "./dist/geometry.js",
     "./guards.js": "./dist/guards.js",
     "./global.js": "./dist/global.js",
-    "./immutable.js": "./dist/immutable.js",
     "./iterables.js": "./dist/iterable.js",
     "./io.js": "./dist/io/js",
     "./keyValues.js": "./dist/keyValues.js",
@@ -56,10 +55,10 @@
   "scripts": {
     "typecheck": "tsc",
     "watch": "tsc --watch",
-    "dev": "tsup --watch",
+    "dev": "NODE_OPTIONS='--max-old-space-size=16384' tsup --watch",
     "clean": "rimraf dist && rimraf etc && rimraf docs",
     "run": "tsc && node -r source-map-support/register",
-    "build": "NODE_OPTIONS='--max-old-space-size=16384' tsup --sourcemap && npm run typings",
+    "build": "NODE_OPTIONS='--max-old-space-size=16384' tsup --sourcemap --dts && npm run typings",
     "build:espruino": "tsup --config espruino.tsup.config.ts",
     "prepublishOnly": "npm run clean && npm run build",
     "typings": "tsc --project config/tsconfig.pkg.json",
@@ -85,24 +84,24 @@
   },
   "devDependencies": {
     "@ava/typescript": "^5.0.0",
-    "@svgdotjs/svg.js": "^3.2.0",
+    "@svgdotjs/svg.js": "^3.2.3",
     "@types/bezier-js": "^4.1.3",
     "@types/jsdom": "^21.1.7",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "7.13.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "7.13.1",
     "ava": "^6.1.3",
     "bezier-js": "^6.1.4",
-    "c8": "^10.0.0",
+    "c8": "^10.1.2",
     "colorjs.io": "^0.5.0",
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-functional": "^6.5.1",
-    "eslint-plugin-unicorn": "^53.0.0",
+    "eslint-plugin-functional": "^6.5.2",
+    "eslint-plugin-unicorn": "^54.0.0",
     "jsdom": "^24.1.0",
     "json5": "^2.2.3",
     "lit": "^3.1.4",
@@ -110,7 +109,7 @@
     "rimraf": "^5.0.7",
     "source-map-support": "^0.5.21",
     "tsup": "^8.1.0",
-    "tsx": "^4.15.2",
+    "tsx": "^4.15.6",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   },
