--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     ],
     "target": "esnext",
     "moduleResolution": "bundler",
+    "declaration": true,
+    "declarationMap": true,
     "module": "es2022",
+    "useDefineForClassFields": false,
     "verbatimModuleSyntax": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
