--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "dev": "NODE_OPTIONS='--max-old-space-size=16384' tsup --watch",
     "clean": "rimraf dist && rimraf etc && rimraf docs",
     "run": "tsc && node -r source-map-support/register",
-    "build": "NODE_OPTIONS='--max-old-space-size=16384' tsup --sourcemap --dts && npm run typings",
+    "build": "tsup --sourcemap && npm run typings",
+    "build:fast": "tsup",
     "build:espruino": "tsup --config espruino.tsup.config.ts",
     "prepublishOnly": "npm run clean && npm run build",
     "typings": "tsc --project config/tsconfig.pkg.json",
@@ -89,8 +90,8 @@
     "@types/jsdom": "^21.1.7",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "7.17.0",
     "ava": "^6.1.3",
     "bezier-js": "^6.1.4",
     "c8": "^10.1.2",
@@ -100,21 +101,21 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-functional": "^6.5.2",
+    "eslint-plugin-functional": "^6.6.3",
     "eslint-plugin-unicorn": "^54.0.0",
-    "jsdom": "^24.1.0",
+    "jsdom": "^24.1.1",
     "json5": "^2.2.3",
     "lit": "^3.1.4",
     "lit-html": "^3.1.4",
-    "rimraf": "^5.0.7",
+    "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
     "tsup": "^8.1.0",
     "tsx": "^4.16.2",
-    "typedoc": "^0.26.3",
+    "typedoc": "^0.26.5",
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "@microsoft/api-extractor": "7.47.0",
+    "@microsoft/api-extractor": "7.47.2",
     "tsimp": "2.0.11"
   },
   "eslintIgnore": [
