--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.27.1",
+  "version": "0.27.2",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -9,7 +9,7 @@
   "author": "Clint Heyer",
   "license": "MIT",
   "repository": {
-    "url": "git@github.com:clinth/ixfx.git"
+    "url": "git+ssh://git@github.com/clinth/ixfx.git"
   },
   "module": "./dist/bundle.js",
   "exports": {
