--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.27.3",
+  "version": "0.27.4",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -56,7 +56,7 @@
     "typecheck": "tsc",
     "watch": "tsc --watch",
     "dev": "NODE_OPTIONS='--max-old-space-size=16384' tsup --watch",
-    "clean": "rimraf dist && rimraf etc && rimraf docs",
+    "clean": "rimraf dist && rimraf etc",
     "run": "tsc && node -r source-map-support/register",
     "build": "tsup --sourcemap && npm run typings",
     "build:fast": "tsup",
