--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.29.1",
+  "version": "0.29.2",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -108,7 +108,7 @@
     "source-map-support": "^0.5.21",
     "tsup": "^8.1.0",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.3"
+    "typescript": "5.7.0-dev.20240830"
   },
   "dependencies": {
     "tsimp": "2.0.11"
