--- a/package.json
+++ b/package.json
@@ -82,36 +82,35 @@
   },
   "devDependencies": {
     "@ava/typescript": "^5.0.0",
+    "@eslint/js": "9.12.0",
     "@svgdotjs/svg.js": "^3.2.4",
     "@types/bezier-js": "^4.1.3",
     "@types/jsdom": "^21.1.7",
-    "@types/w3c-web-serial": "^1.0.6",
+    "@types/w3c-web-serial": "^1.0.7",
     "@types/web-bluetooth": "^0.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
     "ava": "^6.1.3",
     "bezier-js": "^6.1.4",
     "c8": "^10.1.2",
     "colorjs.io": "^0.5.2",
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.0.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-functional": "^6.6.3",
-    "eslint-plugin-unicorn": "^54.0.0",
-    "jsdom": "^24.1.1",
+    "eslint-plugin-unicorn": "^56.0.0",
+    "jsdom": "^25.0.1",
     "json5": "^2.2.3",
-    "lit": "^3.1.4",
-    "lit-html": "^3.1.4",
+    "lit": "^3.2.1",
+    "lit-html": "^3.2.1",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
-    "tsup": "^8.1.0",
-    "tsx": "^4.16.2",
-    "typescript": "5.5.4"
+    "tsup": "^8.3.0",
+    "tsx": "^4.19.1",
+    "typescript": "5.6.3"
   },
   "dependencies": {
-    "tsimp": "2.0.11"
+    "tsimp": "2.0.11",
+    "typescript-eslint": "8.8.1"
   },
   "eslintIgnore": [
     "./dist/**/*"
