--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "test": "tsc && ava --config ./config/ava.config.js --timeout=20s --no-worker-threads -c=1",
     "circular": "madge --circular --extensions ts src/ > madge.txt",
     "coverage": "c8 npm run test",
-    "coverage:report": "c8 report"
+    "coverage:report": "c8 report",
+    "knip": "knip --config ./config/knip.json"
   },
   "c8": {
     "exclude": [
@@ -86,6 +87,7 @@
     "@svgdotjs/svg.js": "^3.2.4",
     "@types/bezier-js": "^4.1.3",
     "@types/jsdom": "^21.1.7",
+    "@types/node": "22.13.1",
     "@types/w3c-web-serial": "^1.0.7",
     "@types/web-bluetooth": "^0.0.20",
     "ava": "^6.1.3",
@@ -100,6 +102,7 @@
     "eslint-plugin-unicorn": "^56.0.0",
     "jsdom": "^25.0.1",
     "json5": "^2.2.3",
+    "knip": "5.44.0",
     "lit": "^3.2.1",
     "lit-html": "^3.2.1",
     "rimraf": "^6.0.1",
@@ -109,7 +112,6 @@
     "typescript": "5.6.3"
   },
   "dependencies": {
-    "tsimp": "2.0.12",
     "typescript-eslint": "8.11.0"
   },
   "eslintIgnore": [
