--- a/package.json
+++ b/package.json
@@ -83,36 +83,34 @@
   },
   "devDependencies": {
     "@ava/typescript": "^5.0.0",
-    "@eslint/js": "9.13.0",
+    "@eslint/js": "9.20.0",
     "@svgdotjs/svg.js": "^3.2.4",
     "@types/bezier-js": "^4.1.3",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "22.13.1",
+    "@types/node": "22.13.4",
     "@types/w3c-web-serial": "^1.0.7",
     "@types/web-bluetooth": "^0.0.20",
-    "ava": "^6.1.3",
+    "ava": "^6.2.0",
     "bezier-js": "^6.1.4",
-    "c8": "^10.1.2",
+    "c8": "^10.1.3",
     "colorjs.io": "^0.5.2",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.2",
     "copyfiles": "^2.4.1",
-    "cross-env": "^7.0.3",
-    "eslint": "9.13.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-unicorn": "^56.0.0",
-    "jsdom": "^25.0.1",
+    "eslint": "9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "jsdom": "^26.0.0",
     "json5": "^2.2.3",
-    "knip": "5.44.0",
+    "knip": "5.44.1",
     "lit": "^3.2.1",
-    "lit-html": "^3.2.1",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
-    "tsup": "^8.3.0",
-    "tsx": "^4.19.1",
-    "typescript": "5.6.3"
+    "tsup": "^8.3.6",
+    "typescript": "5.7.3"
   },
   "dependencies": {
-    "typescript-eslint": "8.11.0"
+    "esbuild": "0.25.0",
+    "typescript-eslint": "8.24.0"
   },
   "eslintIgnore": [
     "./dist/**/*"
