--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.33.8",
+  "version": "0.34.0",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -16,7 +16,6 @@
     ".": "./dist/bundle.js",
     "./arrays.js": "./dist/arrays.js",
     "./collections.js": "./dist/collections.js",
-    "./chains.js": "./dist/iterables/chain.js",
     "./components.js": "./dist/components.js",
     "./data.js": "./dist/data.js",
     "./debug.js": "./dist/debug.js",
@@ -28,7 +27,7 @@
     "./guards.js": "./dist/guards.js",
     "./global.js": "./dist/global.js",
     "./iterables.js": "./dist/iterables.js",
-    "./io.js": "./dist/io/js",
+    "./io.js": "./dist/io.js",
     "./modulation.js": "./dist/modulation.js",
     "./maps.js": "./dist/maps.js",
     "./numbers.js": "./dist/numbers.js",
@@ -83,11 +82,11 @@
   },
   "devDependencies": {
     "@ava/typescript": "^5.0.0",
-    "@eslint/js": "9.20.0",
+    "@eslint/js": "9.21.0",
     "@svgdotjs/svg.js": "^3.2.4",
     "@types/bezier-js": "^4.1.3",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "22.13.4",
+    "@types/node": "22.13.5",
     "@types/w3c-web-serial": "^1.0.7",
     "@types/web-bluetooth": "^0.0.20",
     "ava": "^6.2.0",
@@ -96,23 +95,27 @@
     "colorjs.io": "^0.5.2",
     "concurrently": "^9.1.2",
     "copyfiles": "^2.4.1",
-    "eslint": "9.20.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-unicorn": "^56.0.1",
-    "jsdom": "^26.0.0",
+    "esbuild": "0.25.0",
+    "eslint": "9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-unicorn": "^57.0.0",
+    "jsdom": "26.0.0",
     "json5": "^2.2.3",
-    "knip": "5.44.1",
+    "knip": "5.45.0",
     "lit": "^3.2.1",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
-    "tsup": "^8.3.6",
-    "typescript": "5.7.3"
+    "tsup": "^8.4.0",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.25.0"
   },
   "dependencies": {
-    "esbuild": "0.25.0",
-    "typescript-eslint": "8.24.0"
+    "tsimp": "2.0.12"
   },
   "eslintIgnore": [
     "./dist/**/*"
-  ]
+  ],
+  "imports": {
+    "#root/*": "./src/*"
+  }
 }
