--- a/packages/arrays/tsconfig.json
+++ b/packages/arrays/tsconfig.json
@@ -3,5 +3,5 @@
 	"compilerOptions": {
 		"outDir": "dist"
 	},
-	"include": ["src/**/*", "__tests__/**/*", "../numbers/__tests__/numeric-arrays.test.ts"]
+	"include": ["src/**/*", "__tests__/**/*"]
 }
