--- a/packages/ixfx/package.json
+++ b/packages/ixfx/package.json
@@ -12,6 +12,10 @@
 			"types": "./src/index.ts",
 			"import": "./src/index.ts"
 		},
+		"./numbers": {
+			"types": "./src/numbers/index.ts",
+			"import": "./src/numbers/index.ts"
+		},
 		"./rx": {
 			"types": "./src/rx/index.ts",
 			"import": "./src/rx/index.ts"
@@ -43,6 +47,10 @@
 			"./rx": {
 				"types": "./dist/src/rx/index.d.ts",
 				"import": "./dist/src/rx/index.js"
+			},
+			"./numbers": {
+				"types": "./dist/src/numbers/index.d.ts",
+				"import": "./dist/src/numbers/index.js"
 			}
 		}
 	}
